--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
-    "external-ip": "^2.3.1",
+    "external-ip": "2.3.1",
     "mariadb": "^3.2.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.6.0",
