--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon app.js localhost 8080"
   },
   "dependencies": {
+    "axios": "1.6.2",
     "cookie-parser": "~1.4.4",
     "cors": "2.8.5",
     "debug": "~2.6.9",
@@ -16,6 +17,7 @@
     "mariadb": "^3.2.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.6.0",
+    "node-cron": "3.0.3",
     "otp-generator": "4.0.1",
     "sequelize": "^6.32.1",
     "systeminformation": "5.21.11",
